-----

0.0.10   to be released
    [Added]
       * Support for external process transport ('...+ext://')
       * More documentation on supported URL parameters
       * New '@default_drivers' global variable in connection factory module
    [Fixed]
       * Connection factory's "new" method ignores "drivers" argument

0.0.9    2024-10-06
    [Added]
       * Detection of end-of-stream or stream-read-failure
         conditions to trigger connection termination
       * Cancellation of callbacks, streams and RPC calls on
         connection termination
    [Fixed]
       * Invocation of 'on_close' callback with reason indication
       * MANIFEST fixed to include Sys::Async::Virt::Connection::SSH

0.0.8    2024-10-04
    [Added]
       * Support for SSH-transport ('...+ssh://') connection URLs
       * Run read-only connections through '*-ro' sockets
    [Changed]
       * Calls to auth() and open() are now part of the
         connect() function
    [Fixed]
       * Completeness 'cpanfile' dependency listing
       * Error reporting on Connection module load failure

0.0.7    2024-09-29
    [Breaking]
       * Minimum Perl increased from 5.20 to 5.26 due to the combination
         of signatures with Future::AsyncAwait.  Incidentally also allows
         the use of postfix deref.
    [Added]
       * Support for KeepAlive messages when the server
         advertizes support for it
       * Minimal testing (correct loading of source code)
    [Fixed]
       * Possible out-of-order data transfer to the server
         due to missing sychronization points

0.0.6    2024-09-27
    [Added]
       * Abstract connection driver and Unix connection driver implementations
       * Cleanup of callbacks at connection close; also waits for in-progress
         cancellations (e.g. due to DESTROY) before finishing the connection
       * Connection establishement now part of Sys::Async::Virt through
         connect() function
    [Fixed]