@@ -7,6 +7,7 @@
        * New '@default_drivers' global variable in connection factory module
     [Fixed]
        * Connection factory's "new" method ignores "drivers" argument
+       * Callback registration on a single domain/network/pool/device/secret
 
 0.0.9    2024-10-06
     [Added]
